Se realizó el primer avance del portafolio

--- a/index.html
+++ b/index.html
@@ -4,32 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web La Bolsa Roja</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Portafolio</title>
 </head>
 <body>
-    <header>
-        <h1>La Bolsa Roja</h1>
-        <nav>
-          <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Catálogo</a></li>
-            <li><a href="#">Contacto</a></li>
-          </ul>
+    <header id="mainheader">
+        <nav id="navbar">
+            <div class="container">
+                <h1 class="logo"> <a href="#mainheader">Portafolio</a></h1>
+                <ul>
+                    <li><a href="#mainheader">Inicio</a></li>
+                    <li><a href="#portafolio">Portafolio</a></li>
+                    <li><a href="#acerca de"></a>Acerca de</li>
+                    <li><a href="#contacto"></a>Contacto</li>
+                </ul>
+            </div>
         </nav>
-      </header>
-      <main>
-        <h2>Bienvenidos a nuestra tienda en línea</h2>
-        <p>En La Bolsa Roja, nos especializamos en la venta de bolsas de alta calidad. Ofrecemos una amplia variedad de estilos, colores y materiales para satisfacer las necesidades de nuestros clientes.</p>
-        <h3>Productos Destacados</h3>
-        <ul>
-          <li>Bolsas de los ojos :v</li>
-          <li>Bolsa de Barney</li>
-          <li>Bolsa para bolsas </li>
-        </ul>
-      </main>
-      <footer>
-        <p>Derechos Reservados © 2023 La Bolsa Roja</p>
-      </footer>
-</body>
-</html>
+            <div id="showcase">
+                <div class="container">
+                    <div class="show-row-title">
+                        <p></p>
+                        <h1 class="display 1"></h1>
+
+
+                    </div>
+
+
+                </div>
+              </div>
+
+
+
+
+
+
+
+
+
+    </header>
+
