Se áctualizó el portafolio así como se realizaron modificaciones

--- a/portafolio.html
+++ b/portafolio.html
@@ -14,7 +14,6 @@
                 <h1 class="logo"> <a href="#mainheader">Portafolio</a></h1>
                 <ul>
                     <li><a href="#mainheader">Inicio</a></li>
-                    <li><a href="#portafolio">Portafolio</a></li>
                     <li><a href="#acercade">Acerca de</a></li>
                     <li><a href="#contacto">Contacto</a></li>
                 </ul>
@@ -30,7 +29,7 @@
                         </p>
                     </div>
                     <div class="foto">
-                        <img src="./src/FOTOGM.jpg" alt="foto" width="400px" height="500px"/>
+                        <img src="./src/fotit.jpeg" alt="foto" width="" height=""/>
                     </div>
                 </div>
             </div>
@@ -41,8 +40,7 @@
         <div class="container">
             <h1>Portafolio</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur,
-                cumque numquam. Nisi ab ratione dolore!
+                A continuación, se presentará datos sobre 
             </p>
             <div class="portfolio-row">
                 <a href=""><video src="./src/GITHUB.mp4" autoplay width="200px" height="200px"></a>
